my-apps/home/project-nomad/cyberchef/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  namespace: project-nomad
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: tuxgrid.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "cyberchef.tuxgrid.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: cyberchef
          port: 8080
          weight: 1
